--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.ispwproject/org.example.ispwproject.HelloApplication</mainClass>
+                            <mainClass>org.example.ispwproject/org.example.ispwproject.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
